# attotron

./: README.md  pyproject.toml
attotron/: context_parallel.py  data_parallel.py  dataloader.py  model.py  pgm.py  pipeline_parallel.py  tensor_parallel.py  train.py  utils.py
attotron/nn/: model.py  norm.py  rope.py
test/: test_norm.py  test_rope.py
